Compress_3/evosuite/fixing/evosuite-report-clz/test_build.log
cd /home/liumengjiao/Desktop/CI/Benchmark/../bugs/Compress_3_buggy && timeout 300000 javac -cp  /home/liumengjiao/Desktop/defects4j/framework/lib/test_generation/generation/evosuite-current.jar:target/classes/  /home/liumengjiao/Desktop/CI/Evosuite/Compress_3/Compress/evosuite/1/org/apache/commons/compress/archivers/tar/TarArchiveOutputStream_ESTest.java /home/liumengjiao/Desktop/CI/Evosuite/Compress_3/Compress/evosuite/1/org/apache/commons/compress/archivers/tar/TarArchiveOutputStream_ESTest_scaffolding.java /home/liumengjiao/Desktop/CI/Evosuite/Compress_3/Compress/evosuite/3/org/apache/commons/compress/archivers/tar/TarArchiveOutputStream_ESTest.java /home/liumengjiao/Desktop/CI/Evosuite/Compress_3/Compress/evosuite/3/org/apache/commons/compress/archivers/tar/TarArchiveOutputStream_ESTest_scaffolding.java /home/liumengjiao/Desktop/CI/Evosuite/Compress_3/Compress/evosuite/2/org/apache/commons/compress/archivers/tar/TarArchiveOutputStream_ESTest.java /home/liumengjiao/Desktop/CI/Evosuite/Compress_3/Compress/evosuite/2/org/apache/commons/compress/archivers/tar/TarArchiveOutputStream_ESTest_scaffolding.java /home/liumengjiao/Desktop/CI/Evosuite/Compress_3/Compress/evosuite/0/org/apache/commons/compress/archivers/tar/TarArchiveOutputStream_ESTest.java /home/liumengjiao/Desktop/CI/Evosuite/Compress_3/Compress/evosuite/0/org/apache/commons/compress/archivers/tar/TarArchiveOutputStream_ESTest_scaffolding.java >> evosuite-report-clz/test_build.log 2>&1

/home/liumengjiao/Desktop/CI/Evosuite/Compress_3/Compress/evosuite/3/org/apache/commons/compress/archivers/tar/TarArchiveOutputStream_ESTest.java:24: error: duplicate class: org.apache.commons.compress.archivers.tar.TarArchiveOutputStream_ESTest
public class TarArchiveOutputStream_ESTest extends TarArchiveOutputStream_ESTest_scaffolding {
       ^
/home/liumengjiao/Desktop/CI/Evosuite/Compress_3/Compress/evosuite/3/org/apache/commons/compress/archivers/tar/TarArchiveOutputStream_ESTest_scaffolding.java:18: error: duplicate class: org.apache.commons.compress.archivers.tar.TarArchiveOutputStream_ESTest_scaffolding
public class TarArchiveOutputStream_ESTest_scaffolding {
       ^
/home/liumengjiao/Desktop/CI/Evosuite/Compress_3/Compress/evosuite/2/org/apache/commons/compress/archivers/tar/TarArchiveOutputStream_ESTest.java:26: error: duplicate class: org.apache.commons.compress.archivers.tar.TarArchiveOutputStream_ESTest
public class TarArchiveOutputStream_ESTest extends TarArchiveOutputStream_ESTest_scaffolding {
       ^
/home/liumengjiao/Desktop/CI/Evosuite/Compress_3/Compress/evosuite/2/org/apache/commons/compress/archivers/tar/TarArchiveOutputStream_ESTest_scaffolding.java:18: error: duplicate class: org.apache.commons.compress.archivers.tar.TarArchiveOutputStream_ESTest_scaffolding
public class TarArchiveOutputStream_ESTest_scaffolding {
       ^
/home/liumengjiao/Desktop/CI/Evosuite/Compress_3/Compress/evosuite/0/org/apache/commons/compress/archivers/tar/TarArchiveOutputStream_ESTest.java:24: error: duplicate class: org.apache.commons.compress.archivers.tar.TarArchiveOutputStream_ESTest
public class TarArchiveOutputStream_ESTest extends TarArchiveOutputStream_ESTest_scaffolding {
       ^
/home/liumengjiao/Desktop/CI/Evosuite/Compress_3/Compress/evosuite/0/org/apache/commons/compress/archivers/tar/TarArchiveOutputStream_ESTest_scaffolding.java:18: error: duplicate class: org.apache.commons.compress.archivers.tar.TarArchiveOutputStream_ESTest_scaffolding
public class TarArchiveOutputStream_ESTest_scaffolding {
       ^
6 errors
